# eprints2bags

./: .gitignore  CHANGES.md  CITATION.cff  LICENSE  Makefile  README.md  bag_for_dpn.sh  codemeta.json  eprints2dpn_dc_split.pl  eprints2dpn_ep3xml_split.pl  project_status.md  requirements.txt  setup.cfg  setup.py  stage_bags.bash
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
.graphics/: 216797.cast
dev/icon/: README.md
eprints2bag/: __init__.py  __main__.py  __version__.py  constants.py  debug.py  eprints.py  exceptions.py  files.py  network.py
eprints2bags/: __init__.py  __main__.py  __version__.py  constants.py  credentials.py  data_helpers.py  debug.py  eprints.py  exceptions.py  exit_codes.py  files.py  messages.py  network.py  processes.py  ui.py
eprints2dpn/: __init__.py  eprints.py  eprints2dpn.py  files.py
historical/: README.md  eprints2dpn_ep3xml_split.pl
tests/: test-dc.txt  test-xml.xml
