# =============================================================================
# @file    setup.cfg
# @brief   Package metadata.
# @author  Michael Hucka <mhucka@caltech.edu>
# @license Please see the file named LICENSE in the project directory
# @website https://github.com/caltechlibrary/eprints2bags
# =============================================================================

[metadata]
name             = eprints2bags
version          = 1.9.2
description      = Download EPrints content and save it in BagIt-format bags.
author           = Michael Hucka
author_email     = mhucka@caltech.edu
license          = BSD 3-clause
license_files    = LICENSE
url              = https://github.com/caltechlibrary/eprints2bags
# The remaining items below are used by PyPI.
project_urls     =
  Source Code    = https://github.com/caltechlibrary/eprints2bags
  Bug Tracker    = https://github.com/caltechlibrary/eprints2bags/issues
keywords         = EPrints, archives, preservation, BagIt
classifiers      =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators 
  License :: OSI Approved :: BSD License
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 3.5
  Topic :: System :: Archiving 
  Topic :: System :: Archiving :: Packaging
  Topic :: Utilities
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
scripts  = bin/eprints2bags
zip_safe = False
python_requires = >= 3.5
